k8s/base/elasticsearch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: thehive
  labels:
    app.kubernetes.io/name: elasticsearch
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: elasticsearch
  ports:
    - name: http
      port: 9200
      targetPort: http
    - name: transport
      port: 9300
      targetPort: transport
